@@ -1,5 +1,5 @@
 AUX laptop_mode.init-1.4 1190 SHA256 90a18e5c7e4d0b264bb51deb7b92ff25b508a3ddd75dd6c849fdc48c07ce4fda SHA512 47e67d54ed8005a864c017f4ef063c8a17286c6f8a260984fda96392e6461a3f0c5e4f17f8cf2272b072c1545b8f8e99fe45579a81b4d08a99e1eeb46f400fe5 WHIRLPOOL 7a87608d947be301400f2f1a0294a60f21e2cd1b6bed961788f7fc018bf4ac32d69a50e11e735db3cb6c000174ebd78e59f7ac0cd474bef3b803872b6a6665e5
-DIST laptop-mode-tools_1.61.tar.gz 105193 SHA256 3e49361c6f33035d5bc4a6c542cf0a4fc422037df3740bf7eaf8f5f947cfe65e SHA512 77c3c0825d00b08e9738e40f8d29dc9b640f2ff4ff9252e77f81fcc6f2677922a6503b0c35980619ea71bb929f564f91cf9075f64f33d1a1ee06b1c8a3d5ee45 WHIRLPOOL 82203e07490a0643b5cf5142d7aba99027130d9ca013bb73af1a5176923111b66b3096ba3bc8a4eef5843682d3c429b6da88a99cf12c7f3657358a2309714cf4
-EBUILD laptop-mode-tools-1.61.ebuild 2208 SHA256 15fbf93f92bcd7823b1767485f1484b54f3b0a9d3137579491396648be41455d SHA512 37f8fd4f76b9c69e5b127cf034fc37dfd5b363206ca7fc8c74021b42c8cab962199b96200175b0ecc84b701f83ccc2bf64a792f08ec9a0bcd22edbb975634945 WHIRLPOOL d7572c9dbb3d7a845856a860ccd7b4c0f0bf149e751f3e72e1097151b9dd1037b8ca105f31be5042766fe5531c7470c7a224e21ac3d3ae52b2503f74b2cd3ec8
-MISC ChangeLog 222 SHA256 d4bbf2a40b2d32e3912bc23727cd0ca5eb399868d22821983d694ce98816acc8 SHA512 41c1493146c64d92674b60f18031dfd9a9ce6e67c2df0ae4a7475e1722f5f92e0eb7e487872380abff7008285232397c312657cbcf12a1cf7a5483fd17172d62 WHIRLPOOL 757cdf986ca9791288be6f1de1b502b7325a992e2b3bf5df1ac5b5cdd6b910a15ed1789a959f063d6d4479432d2f8db4a3157dad2ad5b56b8d78ddb7ffada6d6
-MISC metadata.xml 238 SHA256 be2cdf3f642e3abaec651431b55eba90f7e717688e0f3ca535c3f22b04e578b7 SHA512 783f984290e2bd3d55cbed003341a74d7d5d534f61112c0b77c2e478e89c5c5de79f9b0952eec8885612e62cc05d35a32af471146ef25ce06f2989ad2aafd0aa WHIRLPOOL cde18cd57d720937904268eaa4ccd17edc8e8f00f5e014a0e27bb84038eff41ca8e951d9b00c95cd6c88eda6694c263ed1c213ab9a9ed40fcd0195b6435bbb1f
+DIST laptop-mode-tools_1.62.tar.gz 105941 SHA256 d40b3d2fb4dc120b4a427ef7dbddc9dd4d9ea0c475685538d36d3457b39158cd SHA512 3ba2a8db860349c5766f5282ca6f70f3bb780cb44e8674beb7e9c5783e96fc07a144245cc50414fef61b1cd6e08a2096667806792c2853cbcc9c83eb7d796b1a WHIRLPOOL 232115a3a6599241892abcc3f64db8bfa1c897bebbc22c198ce58bcb6bb3dd99aa3fb143c07f69fd6e6099b76da9c494423def0c86c8eeb3b610f9f3e51c0505
+EBUILD laptop-mode-tools-1.62.ebuild 2258 SHA256 4a9f0f93faf363617ab4b5d6778a3a95f0d4de6ebd805d9ec42b7065a16937a7 SHA512 83a57b17d44465e7321f0135ed8dce36a11774b06cb51f9a94a7f997ce108add2c877db63a0823670e42f84168d273ae7dbdd6bd2c98bd51e8ed9eaaf9f8fd96 WHIRLPOOL 340cb3cb5072edfde824b1b8a8ff8f62d43de7b7768e196f898ea3cf6378fc51e3c1337623ae3ef3cee84691ce6a604cb088176e889951cad66f269331cf2c36
+MISC ChangeLog 422 SHA256 40bf9a5bb81e83f9d2a1af1fff1050dc093100da69cba1b082b4ce3409775c64 SHA512 d79f9601d37aee91c75af88fb806823eb73cad349cc731aaa4f30968dd0226af4b8c560bbe97e0284c68e2dc7632a8d8ab0a0fee4ca1043823d3ae6d74700a95 WHIRLPOOL 3b253703b2fc027ea462db1744d2112a32b82f334907f43b159318efc533fe31c415d1a35aa1fb6b5ce7504fac4361486a5ea128aad0881f921b0dd5bb4e6a78
+MISC metadata.xml 293 SHA256 3c4a38e1dcfda2d8f1214b046014710d103be6f0856edba17928a770d5e41238 SHA512 4c9ac8327172fb456b9382ba4d2dc2f02cf483ff813a3dc24c51ee0d3cdb59f8a93e888d15cb325dabc368c8abc82d0b8b3231c9f41d61b2d0efb843d95fa435 WHIRLPOOL 7b92ff633c826863184a6e1509b7a5f1b2f70a0a2e8d88e39fbc58722eac183aedae2dc234dbda476f5aeb60334b21cd7c577c168fa7b431105d64fe8d24effc
