@@ -1,3 +1,9 @@
+*laptop-mode-tools-1.62 (02 Nov 2012)
+
+  02 Nov 2012;  <mrueg@gentoo.org> +laptop-mode-tools-1.62.ebuild,
+  -laptop-mode-tools-1.61.ebuild, metadata.xml:
+  app-laptop/laptop-mode-tools: Version bump
+
 *laptop-mode-tools-1.61 (24 Aug 2012)
 
   24 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu +files/laptop_mode.init-1.4,
